# ffgl

./: README.md
source/plugins/DmxPlayback/: CMakeLists.txt  CsvReader.cpp  CsvReader.h  DmxPlayback.cpp  DmxPlayback.h
source/plugins/SolidColorRemake/: CMakeLists.txt  SolidColorRemake.cpp  SolidColorRemake.h
